overflow-fix

--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -2,9 +2,9 @@
     display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 0.125rem;
+  gap: 0.5rem;
   overflow: hidden;
-  justify-content: space-between;
+  justify-content: start;
 }
 .dropdown-header{
   font-size: 0.875rem;
